--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -28,7 +28,7 @@
 - [5. Perf的相关依赖](#5-perf的相关依赖)
   - [5.1. Symbols: 符号表](#51-symbols-符号表)
   - [perf annotate](#perf-annotate)
-  - [Stack Traces (使用perf record -g收集stack traces)](#stack-traces-使用perf-record-g收集stack-traces)
+  - [Stack Traces](#stack-traces)
 - [6. Perf 功能概述](#6-perf-功能概述)
   - [6.1. 全局性概况](#61-全局性概况)
   - [6.2. 全局细节](#62-全局细节)
@@ -371,7 +371,9 @@ CONFIG_KALLSYMS_EXTRA_PASS=y
 `perf annotate`能够提供源码信息, 不过需要在应用编译的时候带有`-ggdb`.
 
 
-## Stack Traces (使用perf record -g收集stack traces)
+## Stack Traces
+
+(使用`perf record -g`收集stack traces)
 
 要跟踪完整的stack，编译时需要注意几个东西。
 
@@ -387,7 +389,11 @@ either using dwarf data to unwind the stack, or returning the frame pointers.
 
 1. 编译perf时候需要包含`libunwind`和`-g dwarf`
 
+2. 有些编译优化项会忽略frame pointer，所以编译软件时必须指定 `-fno-omit-frame-pointer` ，才能跟踪完整的stack trace.
 
+3. 编译内核时包含 CONFIG_FRAME_POINTER=y
+
+总结一下，要愉快的跟踪更完备的信息，就要在编译软件时打开符号表的支持(gcc -g)，开启annotate的支持(gcc -ggdb)，以及Stack trace的支持(gcc -fno-omit-frame-pointer)。
 
 https://developer.aliyun.com/article/65255
 
