--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -389,13 +389,13 @@ either using dwarf data to unwind the stack, or returning the frame pointers.
 
 1. 编译perf时候需要包含`libunwind`和`-g dwarf`
 
-2. 有些编译优化项会忽略frame pointer，所以编译软件时必须指定 `-fno-omit-frame-pointer` ，才能跟踪完整的stack trace.
+2. 有些编译优化项会忽略frame pointer，所以编译**应用软件**时必须指定 `-fno-omit-frame-pointer` ，才能跟踪完整的stack trace.
 
-3. 编译内核时包含 CONFIG_FRAME_POINTER=y
+3. **编译内核**时包含 `CONFIG_FRAME_POINTER=y`
 
-总结一下，要愉快的跟踪更完备的信息，就要在编译软件时打开符号表的支持(gcc -g)，开启annotate的支持(gcc -ggdb)，以及Stack trace的支持(gcc -fno-omit-frame-pointer)。
 
-https://developer.aliyun.com/article/65255
+总结一下，要愉快的跟踪更完备的信息，就要在**编译软件**时打开符号表的支持(`gcc -g`)，开启**annotate**的支持(`gcc -ggdb`)，以及**Stack trace**的支持(`gcc -fno-omit-frame-pointer`)。
+
 
 # 6. Perf 功能概述
 
