--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -45,6 +45,8 @@
 
 <!-- /code_chunk_output -->
 
+参照: http://www.brendangregg.com/perf.html
+
 # 1. 系统级性能优化
 
 系统级性能优化是指为了提高应用程序对操作系统资源与硬件资源的使用 效率，或者为了提高操作系统对硬件资源的使用效率而进行的代码优化。通过提 高对操作系统资源与硬件资源的利用率，使得应用程序与基础软硬件平台具有更 好的交互性，往往可以显著提升应用程序的执行速度和稳定性。
@@ -78,6 +80,10 @@
 
 Perf是一个基于内核的子系统，它提供一个**性能分析框架**，它以**性能事件**为基础，基于**对这些事件！！！采样！！！** 进行**性能统计**原理，可用于性能瓶颈的查找与热点代码的定位.
 
+perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
+
+perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
+
 perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
 
 Perf不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
@@ -87,7 +93,7 @@ Perf不但可以分析制定应用程序的性能问题（per thread），也可
 
 总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
 
-而Linux有多少性能事件呢?? 见下面部分。
+而Linux有多少性能事件呢?? 下面会说到。
 
 # 3. Perf的相关依赖
 
@@ -226,9 +232,6 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 
 使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
 
-perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
-
-perf命令行接口并不能利用所有的Linux trace特性，有些trace需要通过ftrace接口得到。
 
 ### 5.1.1. 硬件性能事件
 
