--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -149,6 +149,12 @@ perf利用Linux的**trace特性**，可以用于实时跟踪，统计event计数
 [...]
 ```
 
+这里的`perf record`命令用来追踪`block:block_rq_issue`探针, 当发起块设备I/O(磁盘io)请求时候会触发该探针.
+
+`-a`选项用于追踪所有CPUs, `-g`用于记录调用栈, 追踪数据保存到了`perf.data`文件.
+
+`perf report`输出显示 2216 次`disk I/O`事件被追踪,
+
 # 3. Perf的相关依赖
 
 我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
