--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -153,7 +153,7 @@ perf利用Linux的**trace特性**，可以用于实时跟踪，统计event计数
 
 `-a`选项用于追踪所有CPUs, `-g`用于记录调用栈, 追踪数据保存到了`perf.data`文件.
 
-`perf report`输出显示 2216 次`disk I/O`事件被追踪,
+`perf report`输出显示 2216 次`disk I/O`事件被追踪, 32.13% 来自dd命令
 
 # 3. Perf的相关依赖
 
