--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -9,8 +9,9 @@
 - [3. 一个简单例子](#3-一个简单例子)
 - [4. 常用命令](#4-常用命令)
   - [4.1. 三种命令划分](#41-三种命令划分)
-  - [列出事件](#列出事件)
-  - [计数统计事件](#计数统计事件)
+  - [Listing: 列出事件](#listing-列出事件)
+  - [Counting: 计数统计事件](#counting-计数统计事件)
+  - [Profiling: 采样数据](#profiling-采样数据)
 - [5. Perf的相关依赖](#5-perf的相关依赖)
   - [5.1. Symbols: 符号表](#51-symbols-符号表)
   - [5.2. perf annotate](#52-perf-annotate)
@@ -167,7 +168,7 @@ Brendan D. Gregg 收集和写了很多命令, 按从小到大开销进行划分,
 * sample: 采样. 对某几个事件进行采样, 收集性能数据(比如IP和堆栈), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
 * trace: 追踪. 收集所有事件的性能数据
 
-## 列出事件
+## Listing: 列出事件
 
 ```
 # Listing all currently known events:
@@ -177,7 +178,7 @@ perf list
 perf list 'sched:*'
 ```
 
-## 计数统计事件
+## Counting: 计数统计事件
 
 ```
 # CPU counter statistics for the specified command:
@@ -235,6 +236,66 @@ perf stat -e 'block:*' -a sleep 10
 perf stat -e 'vmscan:*' -a -I 1000
 ```
 
+## Profiling: 采样数据
+
+```
+# Sample on-CPU functions for the specified command, at 99 Hertz:
+perf record -F 99 command
+
+# Sample on-CPU functions for the specified PID, at 99 Hertz, until Ctrl-C:
+perf record -F 99 -p PID
+
+# Sample on-CPU functions for the specified PID, at 99 Hertz, for 10 seconds:
+perf record -F 99 -p PID sleep 10
+
+# Sample CPU stack traces (via frame pointers) for the specified PID, at 99 Hertz, for 10 seconds:
+perf record -F 99 -p PID -g -- sleep 10
+
+# Sample CPU stack traces for the PID, using dwarf (dbg info) to unwind stacks, at 99 Hertz, for 10 seconds:
+perf record -F 99 -p PID --call-graph dwarf sleep 10
+
+# Sample CPU stack traces for the entire system, at 99 Hertz, for 10 seconds (< Linux 4.11):
+perf record -F 99 -ag -- sleep 10
+
+# Sample CPU stack traces for the entire system, at 99 Hertz, for 10 seconds (>= Linux 4.11):
+perf record -F 99 -g -- sleep 10
+
+# If the previous command didn't work, try forcing perf to use the cpu-clock event:
+perf record -F 99 -e cpu-clock -ag -- sleep 10
+
+# Sample CPU stack traces for a container identified by its /sys/fs/cgroup/perf_event cgroup:
+perf record -F 99 -e cpu-clock --cgroup=docker/1d567f4393190204...etc... -a -- sleep 10
+
+# Sample CPU stack traces for the entire system, with dwarf stacks, at 99 Hertz, for 10 seconds:
+perf record -F 99 -a --call-graph dwarf sleep 10
+
+# Sample CPU stack traces for the entire system, using last branch record for stacks, ... (>= Linux 4.?):
+perf record -F 99 -a --call-graph lbr sleep 10
+
+# Sample CPU stack traces, once every 10,000 Level 1 data cache misses, for 5 seconds:
+perf record -e L1-dcache-load-misses -c 10000 -ag -- sleep 5
+
+# Sample CPU stack traces, once every 100 last level cache misses, for 5 seconds:
+perf record -e LLC-load-misses -c 100 -ag -- sleep 5 
+
+# Sample on-CPU kernel instructions, for 5 seconds:
+perf record -e cycles:k -a -- sleep 5 
+
+# Sample on-CPU user instructions, for 5 seconds:
+perf record -e cycles:u -a -- sleep 5 
+
+# Sample on-CPU user instructions precisely (using PEBS), for 5 seconds:
+perf record -e cycles:up -a -- sleep 5 
+
+# Perform branch tracing (needs HW support), for 1 second:
+perf record -b -a sleep 1
+
+# Sample CPUs at 49 Hertz, and show top addresses and symbols, live (no perf.data file):
+perf top -F 49
+
+# Sample CPUs at 49 Hertz, and show top process names and segments, live:
+perf top -F 49 -ns comm,dso
+```
 
 # 5. Perf的相关依赖
 
