--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -12,7 +12,11 @@
   - [Listing: 列出事件](#listing-列出事件)
   - [Counting: 计数统计事件](#counting-计数统计事件)
   - [Profiling: 采样数据](#profiling-采样数据)
-  - [static tracing:](#static-tracing)
+  - [static tracing: 静态跟踪](#static-tracing-静态跟踪)
+  - [Dynamic Tracing](#dynamic-tracing)
+  - [Mixed](#mixed)
+  - [Special](#special)
+  - [Reporting](#reporting)
 - [5. Perf的相关依赖](#5-perf的相关依赖)
   - [5.1. Symbols: 符号表](#51-symbols-符号表)
   - [5.2. perf annotate](#52-perf-annotate)
@@ -298,7 +302,7 @@ perf top -F 49
 perf top -F 49 -ns comm,dso
 ```
 
-## static tracing: 
+## static tracing: 静态跟踪
 
 ```
 # Trace new processes, until Ctrl-C:
@@ -373,6 +377,141 @@ perf buildid-cache --add `which node`
 # Trace the node http__server__request USDT event (Linux 4.10+):
 perf record -e sdt_node:http__server__request -a
 ```
+
+## Dynamic Tracing
+
+```
+# Add a tracepoint for the kernel tcp_sendmsg() function entry ("--add" is optional):
+perf probe --add tcp_sendmsg
+
+# Remove the tcp_sendmsg() tracepoint (or use "--del"):
+perf probe -d tcp_sendmsg
+
+# Add a tracepoint for the kernel tcp_sendmsg() function return:
+perf probe 'tcp_sendmsg%return'
+
+# Show available variables for the kernel tcp_sendmsg() function (needs debuginfo):
+perf probe -V tcp_sendmsg
+
+# Show available variables for the kernel tcp_sendmsg() function, plus external vars (needs debuginfo):
+perf probe -V tcp_sendmsg --externs
+
+# Show available line probes for tcp_sendmsg() (needs debuginfo):
+perf probe -L tcp_sendmsg
+
+# Show available variables for tcp_sendmsg() at line number 81 (needs debuginfo):
+perf probe -V tcp_sendmsg:81
+
+# Add a tracepoint for tcp_sendmsg(), with three entry argument registers (platform specific):
+perf probe 'tcp_sendmsg %ax %dx %cx'
+
+# Add a tracepoint for tcp_sendmsg(), with an alias ("bytes") for the %cx register (platform specific):
+perf probe 'tcp_sendmsg bytes=%cx'
+
+# Trace previously created probe when the bytes (alias) variable is greater than 100:
+perf record -e probe:tcp_sendmsg --filter 'bytes > 100'
+
+# Add a tracepoint for tcp_sendmsg() return, and capture the return value:
+perf probe 'tcp_sendmsg%return $retval'
+
+# Add a tracepoint for tcp_sendmsg(), and "size" entry argument (reliable, but needs debuginfo):
+perf probe 'tcp_sendmsg size'
+
+# Add a tracepoint for tcp_sendmsg(), with size and socket state (needs debuginfo):
+perf probe 'tcp_sendmsg size sk->__sk_common.skc_state'
+
+# Tell me how on Earth you would do this, but don't actually do it (needs debuginfo):
+perf probe -nv 'tcp_sendmsg size sk->__sk_common.skc_state'
+
+# Trace previous probe when size is non-zero, and state is not TCP_ESTABLISHED(1) (needs debuginfo):
+perf record -e probe:tcp_sendmsg --filter 'size > 0 && skc_state != 1' -a
+
+# Add a tracepoint for tcp_sendmsg() line 81 with local variable seglen (needs debuginfo):
+perf probe 'tcp_sendmsg:81 seglen'
+
+# Add a tracepoint for do_sys_open() with the filename as a string (needs debuginfo):
+perf probe 'do_sys_open filename:string'
+
+# Add a tracepoint for myfunc() return, and include the retval as a string:
+perf probe 'myfunc%return +0($retval):string'
+
+# Add a tracepoint for the user-level malloc() function from libc:
+perf probe -x /lib64/libc.so.6 malloc
+
+# Add a tracepoint for this user-level static probe (USDT, aka SDT event):
+perf probe -x /usr/lib64/libpthread-2.24.so %sdt_libpthread:mutex_entry
+
+# List currently available dynamic probes:
+perf probe -l
+```
+
+## Mixed
+
+```
+# Trace system calls by process, showing a summary refreshing every 2 seconds:
+perf top -e raw_syscalls:sys_enter -ns comm
+
+# Trace sent network packets by on-CPU process, rolling output (no clear):
+stdbuf -oL perf top -e net:net_dev_xmit -ns comm | strings
+
+# Sample stacks at 99 Hertz, and, context switches:
+perf record -F99 -e cpu-clock -e cs -a -g 
+
+# Sample stacks to 2 levels deep, and, context switch stacks to 5 levels (needs 4.8):
+perf record -F99 -e cpu-clock/max-stack=2/ -e cs/max-stack=5/ -a -g 
+```
+
+## Special
+
+```
+# Record cacheline events (Linux 4.10+):
+perf c2c record -a -- sleep 10
+
+# Report cacheline events from previous recording (Linux 4.10+):
+perf c2c report
+```
+
+## Reporting
+
+```
+# Show perf.data in an ncurses browser (TUI) if possible:
+perf report
+
+# Show perf.data with a column for sample count:
+perf report -n
+
+# Show perf.data as a text report, with data coalesced and percentages:
+perf report --stdio
+
+# Report, with stacks in folded format: one line per stack (needs 4.4):
+perf report --stdio -n -g folded
+
+# List all events from perf.data:
+perf script
+
+# List all perf.data events, with data header (newer kernels; was previously default):
+perf script --header
+
+# List all perf.data events, with customized fields (< Linux 4.1):
+perf script -f time,event,trace
+
+# List all perf.data events, with customized fields (>= Linux 4.1):
+perf script -F time,event,trace
+
+# List all perf.data events, with my recommended fields (needs record -a; newer kernels):
+perf script --header -F comm,pid,tid,cpu,time,event,ip,sym,dso 
+
+# List all perf.data events, with my recommended fields (needs record -a; older kernels):
+perf script -f comm,pid,tid,cpu,time,event,ip,sym,dso
+
+# Dump raw contents from perf.data as hex (for debugging):
+perf script -D
+
+# Disassemble and annotate instructions with percentages (needs some debuginfo):
+perf annotate --stdio
+```
+
+
 
 # 5. Perf的相关依赖
 
