--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -29,8 +29,8 @@
   - [7.3. 编译](#73-编译)
   - [7.4. 安装](#74-安装)
   - [7.5. 帮助文档](#75-帮助文档)
-- [8. Perf性能事件](#8-perf性能事件)
-  - [8.1. 三种类型性能事件](#81-三种类型性能事件)
+- [8. Perf 性能事件](#8-perf-性能事件)
+  - [8.1. 三种类型](#81-三种类型)
     - [8.1.1. 硬件性能事件](#811-硬件性能事件)
     - [8.1.2. 软件性能事件](#812-软件性能事件)
     - [8.1.3. Tracingpoint事件](#813-tracingpoint事件)
@@ -529,7 +529,7 @@ PPT在: https://www.slideshare.net/brendangregg/kernel-recipes-2017-using-linux-
 
 ## 6.1. Symbols: 符号表
 
-没有符号表，**无法**将**内存地址**翻译成函数和变量名。
+没有符号表，**无法**将**内存地址**翻译成**函数**和**变量名**。
 
 例如，无符号表的跟踪显示如下
 
@@ -565,7 +565,7 @@ PPT在: https://www.slideshare.net/brendangregg/kernel-recipes-2017-using-linux-
 
 如何安装符号表?
 
-对于内核代码的符号表，在编译内核时，使用`CONFIG_KALLSYMS=y`。 检查如下
+对于**内核代码**的符号表，在编译内核时，使用`CONFIG_KALLSYMS=y`。 检查如下
 
 ```
 # cat /boot/config-`uname -r` |grep CONFIG_KALLSYMS
@@ -641,7 +641,7 @@ man 1 perf-report
 man 1 perf-list
 ```
 
-# 8. Perf性能事件
+# 8. Perf 性能事件
 
 ![2020-07-20-09-42-57.png](./images/2020-07-20-09-42-57.png)
 
@@ -649,23 +649,30 @@ man 1 perf-list
 
 我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
 
-## 8.1. 三种类型性能事件
+## 8.1. 三种类型
 
 利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，**可能影响到程序性能**的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
 因此，必须先利用perf等性能剖析工具查找引发这些性能事件的热点代码以及热点指令。
 
-perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向
-
-
 使用perf，可以分析程序运行期间发生的硬件事件，比如instructions retired、processor clock cycles等；也可以分析**软件事件**，比如page fault和进程切换。
 
+六种类型的事件:
+
+* Hardware Events: CPU performance monitoring counters.
+* Software Events: These are low level events based on kernel counters. For example, CPU migrations, minor faults, major faults, etc.
+* Kernel Tracepoint Events: This are static kernel-level instrumentation points that are hardcoded in interesting and logical places in the kernel.
+* User Statically-Defined Tracing (USDT): These are static tracepoints for user-level programs and applications.
+* Dynamic Tracing: Software can be dynamically instrumented, creating events in any location. For kernel software, this uses the kprobes framework. For user-level software, uprobes.
+* Timed Profiling: Snapshots can be collected at an arbitrary frequency, using perf record -FHz. This is commonly used for CPU usage profiling, and works by creating custom timed interrupt events.
 
 ### 8.1.1. 硬件性能事件
 
-- Hardware Event由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
+- Hardware Event
 
-来自CPU自己或CPU的PMU（Performance Monitoring Unit，性能监控单元），包含一系列微架构事件例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
+由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
+
+来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元），包含一系列微架构事件例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
