--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -290,6 +290,23 @@ cat /sys/kernel/debug/tracing/trace_pipe
 ```
 
 
+在guest中
+
+
+```
+./perf stat -e 'msr:*' redis-benchmark -t ping,set,get -d 2048 -c 180 -r 1000000 -n 10000000 -q -P 20
+./perf report
+
+Available samples
+0 msr:read_msr
+409K msr:write_msr
+0 msr:rdpmc
+```
+
+
+
+
+
 
 
 
