--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -283,13 +283,6 @@ Total Samples:679918, Total events handled time:481784.64us.
 
 msr和vintr变多, 尤其msr, 进一步分析msr是什么
 
-```
-cd /sys/kernel/debug/tracing/events/kvm/kvm_msr
-echo 1 > enable
-cat /sys/kernel/debug/tracing/trace_pipe
-```
-
-
 在guest中
 
 
@@ -302,6 +295,16 @@ Available samples
 409K msr:write_msr
 0 msr:rdpmc
 ```
+
+在host上
+
+```
+cd /sys/kernel/debug/tracing/events/kvm/kvm_msr
+echo 1 > enable
+cat /sys/kernel/debug/tracing/trace_pipe
+```
+
+
 
 
 
