--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -296,16 +296,24 @@ Available samples
 0 msr:rdpmc
 ```
 
-在host上
+在host上, 抓取kvm_msr的benchmark前后的msr信息, 间隔10s
 
 ```
 cd /sys/kernel/debug/tracing/events/kvm/kvm_msr
-echo 1 > enable
+echo 1 > enable; sleep 10; echo 0 > enable
 cat /sys/kernel/debug/tracing/trace
 ```
 
+通过脚本分析msr_write, 发现
 
+```
+origin:    {'838': 3200, '80b': 1, '830': 1}
+benchmark: {'838': 19686, '80b': 9, '830': 11176}
+```
 
+可以看到830和838的操作多太多
+
+830
 
 
 
