--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -313,7 +313,9 @@ benchmark: {'838': 19686, '80b': 9, '830': 11176}
 
 可以看到830和838的操作多太多
 
-830
+830: Interrupt Command Register (ICR)
+
+838: Initial Count register (for Timer), IMICT
 
 
 
