--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -36,7 +36,7 @@
 
 # 1. 用途
 
-对于一个**指定的性能事件**(默认是CPU周期)，显示**消耗最多**的**函数**或**指令**。
+对于一个**指定的性能事件**(默认是CPU周期)，动态显示**消耗最多**的**函数**或**指令**。
 
 动态显示执行成本最高的项。
 
