--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -8,7 +8,7 @@
   - [2.1. 基本原理](#21-基本原理)
 - [3. 一个简单例子](#3-一个简单例子)
 - [4. 常用命令](#4-常用命令)
-  - [4.1. 三种命令划分](#41-三种命令划分)
+  - [4.1. 三种类型命令](#41-三种类型命令)
   - [4.2. Listing: 列出事件](#42-listing-列出事件)
   - [4.3. Counting: 计数统计事件](#43-counting-计数统计事件)
   - [4.4. Profiling: 采样数据](#44-profiling-采样数据)
@@ -166,13 +166,13 @@ perf利用Linux的**trace特性**，可以用于实时跟踪，统计event计数
 
 # 4. 常用命令
 
-## 4.1. 三种命令划分
+## 4.1. 三种类型命令
 
 Brendan D. Gregg 收集和写了很多命令, 按从小到大开销进行划分, 分为三种:
 
-* statistics/count: 统计/计数, 事件计数的增加
-* sample: 采样. 对某几个事件进行采样, 收集性能数据(比如IP和堆栈), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
-* trace: 追踪. 收集所有事件的性能数据
+* statistics/count: **统计/计数**, 事件计数的增加
+* sample: 采样. 对**某几个事件**进行**采样**, 收集性能数据(比如IP和堆栈), 这就意味着每隔一段时间就会收集一次数据, 所以开销变大
+* trace: 追踪. 收集**所有事件的性能数据**
 
 ## 4.2. Listing: 列出事件
 
