--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -186,6 +186,8 @@ perf list 'sched:*'
 
 ## 4.3. Counting: 计数统计事件
 
+全是stat子命令
+
 ```
 # CPU counter statistics for the specified command:
 perf stat command
@@ -243,6 +245,10 @@ perf stat -e 'vmscan:*' -a -I 1000
 ```
 
 ## 4.4. Profiling: 采样数据
+
+子命令record
+
+子命令top, 动态显示
 
 ```
 # Sample on-CPU functions for the specified command, at 99 Hertz:
@@ -304,6 +310,8 @@ perf top -F 49 -ns comm,dso
 ```
 
 ## 4.5. static tracing: 静态跟踪
+
+子命令record, 针对具体事件进行收集
 
 ```
 # Trace new processes, until Ctrl-C:
