--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -389,6 +389,10 @@ perf record -e sdt_node:http__server__request -a
 
 ## 4.6. Dynamic Tracing: 动态追踪
 
+子命令probe
+
+子命令record, 记录probe事件
+
 ```
 # Add a tracepoint for the kernel tcp_sendmsg() function entry ("--add" is optional):
 perf probe --add tcp_sendmsg
