--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/3. perf stat.md
+++ b/Linux/Debug/debug/tools/perf/3. perf stat.md
@@ -440,18 +440,21 @@ CPU性能计数器:
 perf stat command
 ```
 
+详细的CPU性能计数器
+
 ```
-# 详细的CPU性能计数器
 perf stat -d command
 ```
 
+收集指定进程的性能计数，直到Ctrl-C
+
 ```
-# 收集指定进程的性能计数，直到Ctrl-C
 perf stat -p PID
 ```
 
+收集整个系统的性能计数，持续5秒
+
 ```
-# 收集整个系统的性能计数，持续5秒
 perf stat -a sleep 5
 # Performance counter stats for 'system wide':
 #      20010.623960      cpu-clock (msec)          #    4.000 CPUs utilized          
@@ -466,54 +469,64 @@ perf stat -a sleep 5
 #       5.003219775 seconds time elapsed
 ```
 
+指定需要收集的几种计数器，持续10秒
+
 ```
-# 指定需要收集的几种计数器，持续10秒
 perf stat -e cycles,instructions,cache-references,cache-misses,bus-cycles -a sleep 10
 ```
 
+CPU一级缓存计数器
+
 ```
-# CPU一级缓存计数器
 perf stat -e L1-dcache-loads,L1-dcache-load-misses,L1-dcache-stores command
 ```
 
+TLB计数器
+
 ```
-# TLB计数器
 perf stat -e dTLB-loads,dTLB-load-misses,dTLB-prefetch-misses command
 ```
 
+CPU最后一级缓存计数器
+
 ```
-# CPU最后一级缓存计数器
 perf stat -e LLC-loads,LLC-load-misses,LLC-stores,LLC-prefetches command
 ```
 
+统计指定进程的系统调用
+
 ```
-# 统计指定进程的系统调用
 perf stat -e 'syscalls:sys_enter_*' -p PID
 ```
 
+统计全局系统调用
+
 ```
-# 统计全局系统调用
 perf stat -e 'syscalls:sys_enter_*' -a sleep 5
 ```
 
+统计调度器相关事件
+
 ```
-# 统计调度器相关事件
 perf stat -e 'sched:*' -p PID
 perf stat -e 'sched:*' -p PID sleep 10
 ```
 
+统计Ext4相关事件
+
 ```
-# 统计Ext4相关事件
 perf stat -e 'ext4:*' -a sleep 10
 ```
 
+统计块IO事件
+
 ```
-# 统计块IO事件
 perf stat -e 'block:*' -a sleep 10
 ```
 
+收集多种事件
+
 ```
-# 收集多种事件
 perf stat -e cycles,instructions,cache-misses
 ```
 
