--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -7,11 +7,11 @@
 - [2. 使用方法](#2-使用方法)
 - [3. 参数介绍](#3-参数介绍)
   - [3.1. 常用参数](#31-常用参数)
-  - [输出信息](#输出信息)
-- [例子](#例子)
-  - [性能剖析](#性能剖析)
-  - [静态追踪](#静态追踪)
-- [火焰图](#火焰图)
+  - [3.2. 输出信息](#32-输出信息)
+- [4. 例子](#4-例子)
+  - [4.1. 性能剖析](#41-性能剖析)
+  - [4.2. 静态追踪](#42-静态追踪)
+- [5. 火焰图](#5-火焰图)
 
 <!-- /code_chunk_output -->
 
@@ -66,12 +66,12 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 * `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 `<priority>`
 * `'-u <uid>'`: 只分析用户`<uid>`创建的进程
 
-## 输出信息
+## 3.2. 输出信息
 
 默认在当前目录下生成数据文件: perf.data
 
 
-# 例子
+# 4. 例子
 
 记录nginx进程的性能数据：
 
@@ -92,7 +92,7 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 # perf record -e 'syscalls:sys_enter_*' ls
 ```
 
-## 性能剖析
+## 4.1. 性能剖析
 
 以99HZ的频率剖析指定的命令，默认情况下工作在`Per-thread`模式
 
@@ -178,7 +178,7 @@ perf record -e cycles:u -a -- sleep 5
 perf record -e cycles:up -a -- sleep 5 
 ```
 
-## 静态追踪
+## 4.2. 静态追踪
 
 ```
 # 追踪新进程的创建
@@ -228,7 +228,7 @@ perf buildid-cache --add `which node`
 perf record -e sdt_node:http__server__request -a 
 ```
 
-# 火焰图
+# 5. 火焰图
 
 ```
 git clone https://github.com/cobblau/FlameGraph
