--- a/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
+++ b/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
@@ -58,9 +58,9 @@
 
 取决于当前的瓶颈到底是什么, 如果是 `CPU` 则使用 `On-CPU` 火焰图, 如果是 `IO` 或锁则使用 `Off-CPU` 火焰图. 如果无法确定, 那么可以通过压测工具来确认 : 通过压测工具看看能否让 `CPU` 使用率趋于饱和, 如果能那么使用 `On-CPU` 火焰图, 如果不管怎么压, `CPU` 使用率始终上不来, 那么多半说明程序被 `IO`  或锁卡住了, 此时适合使用 `Off-CPU` 火焰图.
 
-如果还是确认不了, 那么不妨 `On-CPU` 火焰图和 `Off-CPU` 火焰图都搞搞, 正常情况下它们的差异会比较大, 如果两张火焰图长得差不多, 那么通常认为 `CPU` 被其它进程抢占了.
+如果还是确认不了, 那么不妨 `On-CPU` 火焰图和 `Off-CPU` 火焰图都搞搞, 正常情况下它们的差异会比较大, 如果两张火焰图长得差不多, 那么通常认为 `CPU` 被**其它进程**抢占了.
 
-在采样数据的时候, 最好通过压测工具对程序持续施压, 以便采集到足够的样本. 关于压测工具的选择, 如果选择 `ab` 的话, 那么务必记得开启 `-k` 选项, 以避免耗尽系统的可用端口. 此外, 我建议尝试使用诸如 [`wrk`](https://github.com/wg/wrk) 之类更现代的压测工具.
+在**采样数据**的时候, 最好通过压测工具对程序持续施压, 以便采集到足够的样本. 关于压测工具的选择, 如果选择 `ab` 的话, 那么务必记得开启 `-k` 选项, 以避免耗尽系统的可用端口. 此外, 我建议尝试使用诸如 [`wrk`](https://github.com/wg/wrk) 之类更现代的压测工具.
 
 ## 1.3. 火焰图可视化生成器
 
@@ -80,18 +80,18 @@ git clone https://github.com/brendangregg/FlameGraph.git
 
 | 流程 | 描述 | 脚本 |
 |:---:|:---:|:----:|
-| 捕获堆栈 | 使用 `perf/systemtap/dtrace` 等工具抓取程序的运行堆栈 | `perf/systemtap/dtrace` |
-| 折叠堆栈 | `trace` 工具抓取的系统和程序运行每一时刻的堆栈信息, 需要对他们进行分析组合, 将重复的堆栈累计在一起, 从而体现出负载和关键路径 | `FlameGraph` 中的 `stackcollapse` 程序 |
-| 生成火焰图 | 分析 stackcollapse 输出的堆栈信息生成火焰图 | `flamegraph.pl` |
+| **捕获堆栈** | 使用 `perf/systemtap/dtrace` 等工具抓取程序的运行堆栈 | `perf/systemtap/dtrace` |
+| **折叠堆栈** | `trace` 工具抓取的系统和程序运行每一时刻的堆栈信息, 需要对他们进行分析组合, 将重复的堆栈累计在一起, 从而体现出负载和关键路径 | `FlameGraph` 中的 `stackcollapse` 程序 |
+| **生成火焰图** | 分析 stackcollapse 输出的堆栈信息生成火焰图 | `flamegraph.pl` |
 
-不同的 trace 工具抓取到的信息不同, 因此 `Flame Graph` 提供了一系列的 `stackcollapse` 工具.
+不同的 trace 工具抓取到的**信息不同**, 因此 `Flame Graph` 提供了一系列的 `stackcollapse` **折叠堆栈工具**.
 
 | `stackcollapse` | 描述 |
 |:---------------:|:----:|
-| stackcollapse.pl | for DTrace stacks |
-| stackcollapse-perf.pl | for Linux perf_events "perf script" output |
-| stackcollapse-pmc.pl | for FreeBSD pmcstat -G stacks |
-| stackcollapse-stap.pl | for SystemTap stacks |
+| stackcollapse.pl | for **DTrace** stacks |
+| stackcollapse-perf.pl | for Linux perf_events "**perf script**" output |
+| stackcollapse-pmc.pl | for FreeBSD **pmcstat -G** stacks |
+| stackcollapse-stap.pl | for **SystemTap** stacks |
 | stackcollapse-instruments.pl | for XCode Instruments |
 | stackcollapse-vtune.pl | for Intel VTune profiles |
 | stackcollapse-ljp.awk | for Lightweight Java Profiler |
@@ -112,16 +112,21 @@ sudo perf record -F 99 -p 3887 -g -- sleep 30
 
 ![perf 采集 chrome 运行的信息](./images/perf_record_chrome.png)
 
-`perf record` 表示采集系统事件, 没有使用 `-e` 指定采集事件, 则默认采集 `cycles`(即 `CPU clock` 周期), `-F 99` 表示每秒 `99` 次, `-p 13204` 是进程号, 即对哪个进程进行分析, `-g` 表示记录调用栈, `sleep 30` 则是持续 `30` 秒.
+`perf record` 表示采集系统事件, 
+- 没有使用 `-e` 指定采集事件, 则默认采集 `cycles`(即 `CPU clock` 周期), 
+- `-F 99` 表示每秒 `99` 次, 
+- `-p 13204` 是进程号, 即对哪个进程进行分析, 
+- `-g` 表示记录调用栈, 
+- `sleep 30` 则是持续 `30` 秒.
 
 >`-F` 指定采样频率为 `99Hz`(每秒`99`次), 如果 `99次` 都返回同一个函数名, 那就说明 `CPU` 这一秒钟都在执行同一个函数, 可能存在性能问题.
 
-运行后会产生一个庞大的文本文件. 如果一台服务器有 `16` 个  `CPU`, 每秒抽样 `99` 次, 持续 `30` 秒, 就得到 `47,520` 个调用栈, 长达几十万甚至上百万行.
+运行后会产生一个庞大的文本文件. 如果一台服务器有 `16` 个  `CPU`, **每秒抽样** `99` 次, 持续 `30` 秒, 就得到 `47,520` 个调用栈, 长达几十万甚至上百万行.
 
-为了便于阅读, `perf record` 命令可以统计每个调用栈出现的百分比, 然后从高到低排列.
+为了便于阅读, `perf record` 命令可以统计**每个调用栈**出现的**百分比**, 然后**从高到低排列**.
 
 ```cpp
-sudo perf report -n --stdio
+perf report -n --stdio
 ```
 
 ![perf report 信息](./images/perf_report_chrome.png)
