--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -28,9 +28,14 @@
   - [动态创建的进程的性能采集](#动态创建的进程的性能采集)
   - [指定符号名](#指定符号名)
   - [](#)
+  - [使用tty界面](#使用tty界面)
+  - [显示冗余信息](#显示冗余信息)
   - [指定显示信息](#指定显示信息)
-  - [](#-1)
+  - [显示每个符号的采样数量](#显示每个符号的采样数量)
+  - [显示符号对应的性能事件总数](#显示符号对应的性能事件总数)
   - [显示函数的调用图谱](#显示函数的调用图谱)
+  - [仅显示部分符号](#仅显示部分符号)
+  - [](#-1)
 - [例子](#例子)
 
 <!-- /code_chunk_output -->
@@ -253,7 +258,11 @@ perf top --stdio -D
 
 * `'--tui'`：使用tui界面。tui为perf top的默认界面。如前所述，tui界面需要newt软件包的支持。如果用户打开perf top后，出现的不是tui界面，请检查系统中是否已安装newt包。
 
-* `'--stdio'`：使用TTY页面。当系统中未装newt软件包时，此界面为默认界面。
+## 使用tty界面
+
+* `'--stdio'`：使用TTY页面。当系统中**未装newt软件包**时，此界面为默认界面。
+
+## 显示冗余信息
 
 * `'-v'` or `'--verbose'`：显示冗余信息，如符号地址、符号类型（全局、局部、用户、内核等）。
 
@@ -281,7 +290,8 @@ perf top -s comm,pid,dso,parent,symbol
 
 从图可以查看更丰富的信息，各行信息的意义与上述命令中个字段的排序相对应。
 
-##
+## 显示每个符号的采样数量
+
 * `'-n'` or `'--show-nr-samples'`：显示**每个符号**对应的**采样数量**。
 
 ```
@@ -292,7 +302,11 @@ perf top -n
 
 图上的第二列为本行的符号在本轮分析中对应的采样数量
 
-* `'--show-total-period'`：在界面上显示符号对应的**性能事件总数**。性能事件计数器在溢出时才会触发一次采样。两次采样之间的计数值即为这段事件内发生的事件总数，perf将其称之为周期（period）。
+## 显示符号对应的性能事件总数
+
+* `'--show-total-period'`：在界面上显示符号对应的**性能事件总数**。
+
+**性能事件计数器**在**溢出**时才会触发**一次采样**。两次采样之间的**计数值**即为这段事件内发生的**事件总数**，perf将其称之为周期（`period`）。
 
 * 使用方法为：
 
@@ -306,7 +320,9 @@ perf top --show-total-period
 
 ## 显示函数的调用图谱
 
-* `'-g'` or `'--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>'`: 在界面上显示函数的**调用图谱**。用户还可以指定显示类型，采样率的最小阈值，以及调用顺序。
+* `'-g'` or `'--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>'`: 在界面上显示函数的**调用图谱**。
+
+用户还可以指定显示类型，采样率的最小阈值，以及调用顺序。
 
 下面通过一个简单的程序观察一下 perf top 如何显示调用图谱。
 
@@ -463,7 +479,11 @@ callee 与 caller。
 
 ![2020-07-20-11-08-51.png](./images/2020-07-20-11-08-51.png)
 
-* `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为dos_name的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
+## 仅显示部分符号
+
+* `'--dsos' <dso_name[,dso_name...]>`：仅显示dos名为`dos_name`的符号。可以同时指定多个dso，各个dso名字之间通过逗号隔开。
+
+## 
 
 * `'--comms' <comm[,comm...]>`：仅显示属于进程"comm"的符号。
 
