--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/5. perf report.md
+++ b/Linux/Debug/debug/tools/perf/5. perf report.md
@@ -80,18 +80,18 @@ perf report [-i <file> | --input=file]
     <tr>
         <td>-e</td>
         <td>
-指定直方图的排序方式，逗号分隔多个排序方式，优先级降序<br>
-<ul>
-<li>comm 任务的命令</li>
-<li>pid 任务的PID</li>
-<li>dso 采样时执行的库或者模块的名称</li>
-<li>symbol 采样时执行的函数</li>
-<li>srcline,srcfile 代码文件和行数，需要DWARF调试信息</li>
-<li>overhead 采样的执行成本</li>
-<li>overhead_sys 采样在内核态的执行成本</li>
-<li>overhead_us 采样在用户态的执行成本</li>
-<li>sample 采样数量</li>
-</ul>
+        指定直方图的排序方式，逗号分隔多个排序方式，优先级降序<br>
+        <ul>
+        <li>comm 任务的命令</li>
+        <li>pid 任务的PID</li>
+        <li>dso 采样时执行的库或者模块的名称</li>
+        <li>symbol 采样时执行的函数</li>
+        <li>srcline,srcfile 代码文件和行数，需要DWARF调试信息</li>
+        <li>overhead 采样的执行成本</li>
+        <li>overhead_sys 采样在内核态的执行成本</li>
+        <li>overhead_us 采样在用户态的执行成本</li>
+        <li>sample 采样数量</li>
+        </ul>
         </td>
     </tr>
     <tr>
@@ -130,10 +130,10 @@ perf report -k /tmp/vmlinux
 各列含义如下：
 
 * Overhead，在对应函数中采样到的样本计数
-* Command，样本从什么应用程序中采集到
-* Shared Object，样本来自的ELF镜像。如果：
-  * 应用程序是动态链接的，这里可能显示共享库的名称
-  * 如果样本来自内核空间，则一律显示伪ELF镜像名“kernel.kallsyms”
+* Command，样本从**什么应用程序**中采集到
+* Shared Object，样本来自的**ELF镜像**。如果：
+  * 应用程序是**动态链接**的，这里可能显示**共享库的名称**
+  * 如果样本来自**内核空间**，则一律显示伪ELF镜像名“`kernel.kallsyms`”
 * 第4列是特权级别，点号表示用户级别，k、g、u、H分别表示内核级别、客户机内核级别、客户机用户级别、hypervisor
 * 最后一列是符号名称，如果缺乏调试信息，则显示为0x开头的函数内存地址
 
