--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -30,7 +30,7 @@
   - [7.4. 安装](#74-安装)
   - [7.5. 帮助文档](#75-帮助文档)
 - [8. Perf 性能事件](#8-perf-性能事件)
-  - [8.1. 三种类型](#81-三种类型)
+  - [8.1. 六种类型](#81-六种类型)
     - [8.1.1. 硬件性能事件](#811-硬件性能事件)
     - [8.1.2. 软件性能事件](#812-软件性能事件)
     - [8.1.3. Tracingpoint事件](#813-tracingpoint事件)
@@ -661,7 +661,7 @@ man 1 perf-list
 
 我们看到perf支持这么多的事件和trace，它**依赖了很多的接口**来干这件事情。
 
-## 8.1. 三种类型
+## 8.1. 六种类型
 
 利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，**可能影响到程序性能**的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
@@ -684,7 +684,7 @@ man 1 perf-list
 
 由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
 
-来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元），包含一系列微架构事件例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
+来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元），包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
