--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -33,8 +33,10 @@
   - [8.1. 六种类型](#81-六种类型)
     - [8.1.1. 硬件性能事件](#811-硬件性能事件)
     - [8.1.2. 软件性能事件](#812-软件性能事件)
-    - [8.1.3. Tracingpoint事件](#813-tracingpoint事件)
+    - [8.1.3. 内核态Tracingpoint事件](#813-内核态tracingpoint事件)
+    - [用户态tracingpoint事件](#用户态tracingpoint事件)
     - [8.1.4. 动态追踪](#814-动态追踪)
+    - [](#)
     - [8.1.5. 事件限定符](#815-事件限定符)
   - [8.2. 性能事件的属性](#82-性能事件的属性)
     - [8.2.1. PMI中断和PEBS中断](#821-pmi中断和pebs中断)
@@ -694,7 +696,7 @@ man 1 perf-list
 
 基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
 
-### 8.1.3. Tracingpoint事件
+### 8.1.3. 内核态Tracingpoint事件
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
 
@@ -707,11 +709,17 @@ man 1 perf-list
 4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
   - perf record -F XXXHz
 
+### 用户态tracingpoint事件
+
+用户态有一些静态tracepoint事件
+
 ### 8.1.4. 动态追踪
 
 要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
 
 要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
+
+### 
 
 ### 8.1.5. 事件限定符
 
