--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -31,29 +31,13 @@
   - [7.5. 帮助文档](#75-帮助文档)
 - [8. Perf 性能事件](#8-perf-性能事件)
   - [8.1. 六种类型](#81-六种类型)
-    - [8.1.1. 硬件性能事件](#811-硬件性能事件)
-    - [8.1.2. 软件性能事件](#812-软件性能事件)
-    - [8.1.3. 内核态Tracingpoint事件](#813-内核态tracingpoint事件)
-    - [用户态tracingpoint事件](#用户态tracingpoint事件)
-    - [8.1.4. 动态追踪](#814-动态追踪)
-    - [](#)
-    - [8.1.5. 事件限定符](#815-事件限定符)
-  - [8.2. 性能事件的属性](#82-性能事件的属性)
-    - [8.2.1. PMI中断和PEBS中断](#821-pmi中断和pebs中断)
-    - [8.2.2. 性能事件的精度级别](#822-性能事件的精度级别)
-    - [8.2.3. 其他属性](#823-其他属性)
-  - [8.3. 没有预定义字符描述的硬件性能事件](#83-没有预定义字符描述的硬件性能事件)
-  - [8.4. perf list查看所有性能事件](#84-perf-list查看所有性能事件)
-  - [8.5. 性能事件指定错误](#85-性能事件指定错误)
-- [9. Perf 功能概述](#9-perf-功能概述)
-  - [9.1. 全局性概况](#91-全局性概况)
-  - [9.2. 全局细节](#92-全局细节)
-  - [9.3. 特定功能分析](#93-特定功能分析)
-  - [9.4. perf record](#94-perf-record)
-  - [9.5. 可视化工具perf timechart](#95-可视化工具perf-timechart)
-- [10. 简单示例](#10-简单示例)
-  - [10.1. cycles原理](#101-cycles原理)
-- [11. 参考](#11-参考)
+  - [8.2. perf list查看所有性能事件](#82-perf-list查看所有性能事件)
+    - [8.2.1. 硬件性能事件](#821-硬件性能事件)
+    - [8.2.2. 软件性能事件](#822-软件性能事件)
+- [include <stdio.h>](#include-stdioh)
+- [include <math.h>](#include-mathh)
+- [include <sys/types.h>](#include-systypesh)
+- [include <linux/unistd.h>](#include-linuxunistdh)
 
 <!-- /code_chunk_output -->
 
@@ -680,130 +664,7 @@ man 1 perf-list
 * Dynamic Tracing: Software can be dynamically instrumented, creating events in any location. For kernel software, this uses the kprobes framework. For user-level software, uprobes.
 * Timed Profiling: Snapshots can be collected at an arbitrary frequency, using perf record -FHz. This is commonly used for CPU usage profiling, and works by creating custom timed interrupt events.
 
-### 8.1.1. 硬件性能事件
-
-- Hardware Event
-
-由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
-
-来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元），包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
-
-完整的性能事件列表见Intel手册`Performance Monitoring Events`
-
-### 8.1.2. 软件性能事件
-
-- Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
-
-基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
-
-### 8.1.3. 内核态Tracingpoint事件
-
-- Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
-
-由内核中的**ftrace**实现，包括：
-1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
-2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
-3. **动态追踪**，软件可以被动态instrumented，在任何位置创建事件。
-  - 对于**内核软件**，使用**kprobes框架**；
-  - 对于**用户软件**，使用**uprobes**
-4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
-  - perf record -F XXXHz
-
-### 用户态tracingpoint事件
-
-用户态有一些静态tracepoint事件
-
-### 8.1.4. 动态追踪
-
-要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
-
-要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
-
-### 
-
-### 8.1.5. 事件限定符
-
-事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
-
-https://blog.gmem.cc/perf
-
-## 8.2. 性能事件的属性
-
-### 8.2.1. PMI中断和PEBS中断
-
-perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
-
-样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
-
-这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
-
-record子命令默认使用cycle事件，类似于定期采样。
-
-
-**硬件性能事件**由处理器的PMU提供支持。
-
-如前文所述，perf会对PMI中断发生时的PC寄存器进行采样。由于现代处理器的主频非常高，在加上深度流水线机制，从**性能事件被触发**，到处理器**响应PMI中断**，流水线上可能已处理过百条指令。那么**PMI中断**采到的**指令地址**就不再是处罚性能事件的那条指令的地址了，而可能具有**非常严重的偏差**。
-
-为了解决这个问题，intel处理器通过**PEBS**（Precise Event Based Sampling）机制实现了**高精度事件采样**。PEBS通过硬件在**计数器溢出**时将处理器现场直接保存到内存（而**不是在相应中断时**才保存寄存器现场），从而使得perf能够真正触发性能事件的那条指令的地址，提高了采样精度。
-
-在默认条件下，perf**不使用PEBS机制**。用户如果想要使用**高精度采样**，需要在指定性能事件时，在事件后调价后缀"`:p`"或"`:pp`"。
-
-例如：
-
-```
-perf top -e cycles:pp
-```
-
-### 8.2.2. 性能事件的精度级别
-
-Perf 在采样精度上定义了 4 个级别.
-
-Level | Comment
----|---
-0 | 无精度保证
-1 | 采样指令与触发性能事件的指令之间的偏差为常数（:p）
-2 | 需要尽量保证采样指令与触发性能事件的指令的偏差为0（:pp）
-3 | 保证采样指令与触发性能事件的指令之间的偏差**必须为0**（:ppp）
-
-目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
-
-### 8.2.3. 其他属性
-
-除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
-
-attribute | Comment
----|---
-u | 仅统计用户空间程序触发的性能事件。
-k | 仅统计内核触发的性能事件。
-h | 仅统计Hypervisor触发的性能事件。
-G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
-H | 仅统计Host系统触发的性能事件。
-p | 精度级别。
-
-## 8.3. 没有预定义字符描述的硬件性能事件
-
-另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
-
-这时，就需要我们**根据CPU的手册**，通过性能事件的标号配置PMU的性能计数器。可以采用如下方式：
-
-```
-perf top -e r[UMask+EventSelect]
-```
-
-举个例子，我们现在想统计所有**从内存中读过数据的指令的个数**，perf list中并未预定义此事件的字符描述。通过查找intel的处理器手册，我们找了此事件编码：
-
-![2020-07-20-08-47-26.png](./images/2020-07-20-08-47-26.png)
-
-便可以通过以下方式使用此事件：
-
-```
-perf stat -e r010b ls
-```
-
-所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
-
-
-## 8.4. perf list查看所有性能事件
+## 8.2. perf list查看所有性能事件
 
 不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
 
@@ -828,6 +689,145 @@ perf stat -e r010b ls
 ......
 
 ![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
+
+### 8.2.1. 硬件性能事件
+
+- Hardware Event
+
+由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
+
+来自CPU自己或CPU的PMU（`Performance Monitoring Unit`，性能监控单元），包含一系列**微架构事件**例如时钟周期、L1缓存丢失等。具体支持的事件类型取决于CPU型号
+
+完整的性能事件列表见Intel手册`Performance Monitoring Events`
+
+### 8.2.2. 软件性能事件
+
+- Software Event是**内核产生的事件/计数器**，分布在**各个功能模块**中，统计和**操作系统相关性能事件**。比如**进程切换**，等。
+
+基于**内核计数器**的低级事件，例如CPU迁移、**tick数**、上下文切换、Minor Faults、Major Faults（页面错误）
+
+软件性能事件比较少
+
+```
+  alignment-faults                                   [Software event]
+  bpf-output                                         [Software event]
+  context-switches OR cs                             [Software event]
+  cpu-clock                                          [Software event]
+  cpu-migrations OR migrations                       [Software event]
+  dummy                                              [Software event]
+  emulation-faults                                   [Software event]
+  major-faults                                       [Software event]
+  minor-faults                                       [Software event]
+  page-faults OR faults                              [Software event]
+  task-clock                                         [Software event]
+```
+
+### 8.2.3. 内核态Tracingpoint事件
+
+- Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
+
+由内核中的**ftrace**实现，包括：
+1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
+2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
+3. **动态追踪**，软件可以被动态instrumented，在任何位置创建事件。
+  - 对于**内核软件**，使用**kprobes框架**；
+  - 对于**用户软件**，使用**uprobes**
+4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
+  - perf record -F XXXHz
+
+### 8.2.4. 用户态tracingpoint事件
+
+用户态有一些静态tracepoint事件
+
+### 8.2.5. 动态追踪
+
+要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
+
+要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
+
+### 8.2.6. 
+
+### 8.2.7. 事件限定符
+
+事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
+
+https://blog.gmem.cc/perf
+
+## 8.3. 性能事件的属性
+
+### 8.3.1. PMI中断和PEBS中断
+
+perf的采样是**基于事件**进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值！！！**，则**产生一个采样**。
+
+样本中包含的信息取决于用户和工具指定的**度量类型**，但是最重要的信息是**指令指针**（instruction pointer），也就是程序**被中断时所处的位置**。
+
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，**样本中记录的指针**，和程序被中断以处理PMU事件时的指令指针，可能**相隔数十个指令**。
+
+record子命令默认使用cycle事件，类似于定期采样。
+
+
+**硬件性能事件**由处理器的PMU提供支持。
+
+如前文所述，perf会对PMI中断发生时的PC寄存器进行采样。由于现代处理器的主频非常高，在加上深度流水线机制，从**性能事件被触发**，到处理器**响应PMI中断**，流水线上可能已处理过百条指令。那么**PMI中断**采到的**指令地址**就不再是处罚性能事件的那条指令的地址了，而可能具有**非常严重的偏差**。
+
+为了解决这个问题，intel处理器通过**PEBS**（Precise Event Based Sampling）机制实现了**高精度事件采样**。PEBS通过硬件在**计数器溢出**时将处理器现场直接保存到内存（而**不是在相应中断时**才保存寄存器现场），从而使得perf能够真正触发性能事件的那条指令的地址，提高了采样精度。
+
+在默认条件下，perf**不使用PEBS机制**。用户如果想要使用**高精度采样**，需要在指定性能事件时，在事件后调价后缀"`:p`"或"`:pp`"。
+
+例如：
+
+```
+perf top -e cycles:pp
+```
+
+### 8.3.2. 性能事件的精度级别
+
+Perf 在采样精度上定义了 4 个级别.
+
+Level | Comment
+---|---
+0 | 无精度保证
+1 | 采样指令与触发性能事件的指令之间的偏差为常数（:p）
+2 | 需要尽量保证采样指令与触发性能事件的指令的偏差为0（:pp）
+3 | 保证采样指令与触发性能事件的指令之间的偏差**必须为0**（:ppp）
+
+目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
+
+### 8.3.3. 其他属性
+
+除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
+
+attribute | Comment
+---|---
+u | 仅统计用户空间程序触发的性能事件。
+k | 仅统计内核触发的性能事件。
+h | 仅统计Hypervisor触发的性能事件。
+G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
+H | 仅统计Host系统触发的性能事件。
+p | 精度级别。
+
+## 8.4. 没有预定义字符描述的硬件性能事件
+
+另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
+
+这时，就需要我们**根据CPU的手册**，通过性能事件的标号配置PMU的性能计数器。可以采用如下方式：
+
+```
+perf top -e r[UMask+EventSelect]
+```
+
+举个例子，我们现在想统计所有**从内存中读过数据的指令的个数**，perf list中并未预定义此事件的字符描述。通过查找intel的处理器手册，我们找了此事件编码：
+
+![2020-07-20-08-47-26.png](./images/2020-07-20-08-47-26.png)
+
+便可以通过以下方式使用此事件：
+
+```
+perf stat -e r010b ls
+```
+
+所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
+
 
 ## 8.5. 性能事件指定错误
 
