--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -34,10 +34,26 @@
   - [8.2. perf list查看所有性能事件](#82-perf-list查看所有性能事件)
     - [8.2.1. 硬件性能事件](#821-硬件性能事件)
     - [8.2.2. 软件性能事件](#822-软件性能事件)
-- [include <stdio.h>](#include-stdioh)
-- [include <math.h>](#include-mathh)
-- [include <sys/types.h>](#include-systypesh)
-- [include <linux/unistd.h>](#include-linuxunistdh)
+    - [8.2.3. 内核态Tracingpoint事件](#823-内核态tracingpoint事件)
+    - [8.2.4. 用户态tracingpoint事件](#824-用户态tracingpoint事件)
+    - [8.2.5. 动态追踪](#825-动态追踪)
+    - [8.2.6.](#826)
+    - [8.2.7. 事件限定符](#827-事件限定符)
+  - [8.3. 性能事件的属性](#83-性能事件的属性)
+    - [8.3.1. PMI中断和PEBS中断](#831-pmi中断和pebs中断)
+    - [8.3.2. 性能事件的精度级别](#832-性能事件的精度级别)
+    - [8.3.3. 其他属性](#833-其他属性)
+  - [8.4. 没有预定义字符描述的硬件性能事件](#84-没有预定义字符描述的硬件性能事件)
+  - [8.5. 性能事件指定错误](#85-性能事件指定错误)
+- [9. Perf 功能概述](#9-perf-功能概述)
+  - [9.1. 全局性概况](#91-全局性概况)
+  - [9.2. 全局细节](#92-全局细节)
+  - [9.3. 特定功能分析](#93-特定功能分析)
+  - [9.4. perf record](#94-perf-record)
+  - [9.5. 可视化工具perf timechart](#95-可视化工具perf-timechart)
+- [10. 简单示例](#10-简单示例)
+  - [10.1. cycles原理](#101-cycles原理)
+- [11. 参考](#11-参考)
 
 <!-- /code_chunk_output -->
 
@@ -709,6 +725,9 @@ man 1 perf-list
 软件性能事件比较少
 
 ```
+# ./perf list
+List of pre-defined events (to be used in -e):
+...
   alignment-faults                                   [Software event]
   bpf-output                                         [Software event]
   context-switches OR cs                             [Software event]
@@ -720,7 +739,47 @@ man 1 perf-list
   minor-faults                                       [Software event]
   page-faults OR faults                              [Software event]
   task-clock                                         [Software event]
+...
 ```
+
+通过`man perf_event_open`也能看到, type是`PERF_TYPE_SOFTWARE`
+
+```
+              If type is PERF_TYPE_SOFTWARE, we are measuring software events provided by the kernel.  Set config to one of the following:
+
+                   PERF_COUNT_SW_CPU_CLOCK
+                          This reports the CPU clock, a high-resolution per-CPU timer.
+
+                   PERF_COUNT_SW_TASK_CLOCK
+                          This reports a clock count specific to the task that is running.
+
+                   PERF_COUNT_SW_PAGE_FAULTS
+                          This reports the number of page faults.
+
+                   PERF_COUNT_SW_CONTEXT_SWITCHES
+                          This counts context switches.  Until Linux 2.6.34, these were all reported as user-space events, after that they are reported as
+                          happening in the kernel.
+
+                   PERF_COUNT_SW_CPU_MIGRATIONS
+                          This reports the number of times the process has migrated to a new CPU.
+
+                   PERF_COUNT_SW_PAGE_FAULTS_MIN
+                          This counts the number of minor page faults.  These did not require disk I/O to handle.
+
+                   PERF_COUNT_SW_PAGE_FAULTS_MAJ
+                          This counts the number of major page faults.  These required disk I/O to handle.
+
+                   PERF_COUNT_SW_ALIGNMENT_FAULTS (Since Linux 2.6.33)
+                          This counts the number of alignment faults.  These happen when unaligned memory accesses happen; the kernel can handle these but
+                          it reduces performance.  This happens only on some architectures (never on x86).
+
+                   PERF_COUNT_SW_EMULATION_FAULTS (Since Linux 2.6.33)
+                          This counts the number of emulation faults.  The kernel sometimes traps on unimplemented instructions and emulates them for user
+                          space.  This can negatively impact performance.
+...
+```
+
+
 
 ### 8.2.3. 内核态Tracingpoint事件
 
