--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -779,7 +779,23 @@ List of pre-defined events (to be used in -e):
 ...
 ```
 
+内核也支持tracepoints, 和软件事件类似, 但是内核tracepoints有不同的扩展性更强的API.
 
+软件事件有默认的周期. 这意味着当对软件事件采样时, 采样的是事件的子事件, 而不是每个事件. 通过`perf record -vv`可以查看
+
+```
+./perf record -vv -e context-switches /bin/true
+...
+perf_event_attr:
+  type                             1
+  size                             120
+  config                           0x9
+  watermark                        1
+  sample_id_all                    1
+  bpf_event                        1
+  { wakeup_events, wakeup_watermark } 1
+...
+```
 
 ### 8.2.3. 内核态Tracingpoint事件
 
