--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -32,7 +32,7 @@
 - [8. Perf 性能事件](#8-perf-性能事件)
   - [8.1. 六种类型](#81-六种类型)
   - [8.2. perf list查看所有性能事件](#82-perf-list查看所有性能事件)
-    - [8.2.1. 硬件性能事件](#821-硬件性能事件)
+    - [8.2.1. 硬件性能事件(PMCs)](#821-硬件性能事件pmcs)
     - [8.2.2. 软件性能事件](#822-软件性能事件)
     - [8.2.3. 内核态Tracingpoint事件](#823-内核态tracingpoint事件)
     - [8.2.4. 用户态tracingpoint事件](#824-用户态tracingpoint事件)
@@ -706,7 +706,7 @@ man 1 perf-list
 
 ![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
 
-### 8.2.1. 硬件性能事件
+### 8.2.1. 硬件性能事件(PMCs)
 
 - Hardware Event
 
@@ -785,17 +785,76 @@ List of pre-defined events (to be used in -e):
 
 ```
 ./perf record -vv -e context-switches /bin/true
-...
+Using CPUID GenuineIntel-6-55-7
+intel_pt default config: tsc,mtc,mtc_period=3,psb_period=3,pt,branch
+nr_cblocks: 0
+affinity: SYS
+mmap flush: 1
+comp level: 0
+------------------------------------------------------------
 perf_event_attr:
   type                             1
   size                             120
-  config                           0x9
-  watermark                        1
+  config                           0x3
+  { sample_period, sample_freq }   4000
+  sample_type                      IP|TID|TIME|PERIOD
+  read_format                      ID
+  disabled                         1
+  inherit                          1
+  mmap                             1
+  comm                             1
+  freq                             1
+  enable_on_exec                   1
+  task                             1
   sample_id_all                    1
+  exclude_guest                    1
+  mmap2                            1
+  comm_exec                        1
+  ksymbol                          1
   bpf_event                        1
-  { wakeup_events, wakeup_watermark } 1
 ...
 ```
+
+注意: `{ sample_period, sample_freq }`
+
+通过`man perf_event_open`查看这几个属性的描述. 默认情况下, 这些属性表明内核调整采样频率, 从而每秒能捕获 4000 个`context-switch`事件. 如果打算record所有, 使用`-c 1`:
+
+```
+./perf record -vv -e context-switches -c 1 /bin/true
+Using CPUID GenuineIntel-6-55-7
+intel_pt default config: tsc,mtc,mtc_period=3,psb_period=3,pt,branch
+nr_cblocks: 0
+affinity: SYS
+mmap flush: 1
+comp level: 0
+------------------------------------------------------------
+perf_event_attr:
+  type                             1
+  size                             120
+  config                           0x3
+  { sample_period, sample_freq }   1
+  sample_type                      IP|TID|TIME
+  read_format                      ID
+  disabled                         1
+  inherit                          1
+  mmap                             1
+  comm                             1
+  enable_on_exec                   1
+  task                             1
+  sample_id_all                    1
+  exclude_guest                    1
+  mmap2                            1
+  comm_exec                        1
+  ksymbol                          1
+  bpf_event                        1
+------------------------------------------------------------
+...
+```
+
+注意: `{ sample_period, sample_freq }`
+
+
+
 
 ### 8.2.3. 内核态Tracingpoint事件
 
